--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DictionaryActivity">
+        <activity android:name=".RecyclerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ConstraintLayoutTestActivity"></activity>
-        <activity android:name=".imageViewActivity">
+        <activity android:name=".DictionaryActivity">
 
         </activity>
+        <activity android:name=".ConstraintLayoutTestActivity" />
+        <activity android:name=".imageViewActivity"></activity>
         <activity android:name=".MainActivity" />
     </application>
 
